# learncmake

./: CMakeLists.txt  README.md  build.sh
demo/: hello.cpp
include/: add.h
source/: add.cpp
